--- a/pick-up-proj/public/src/app/home/home.component.html
+++ b/pick-up-proj/public/src/app/home/home.component.html
@@ -218,10 +218,10 @@
                 <img class="img-fluid rounded mb-5" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Find local basketball pickup games. Indoor or outdoor, make sure to coordinate ahead of time and bring your kicks.</p>
-                <button class="btn btn-primary" href="/sports/basketball" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Go To Page!
-                </button>
+                <a href="/sports/basketball"><button class="btn btn-primary">
+                    <i class="fas fa-times fa-fw"></i>
+                    Go To Page!
+                  </button></a>
                 <button class="btn btn-secondary" href="#" data-dismiss="modal" style="margin-left: 10px;">
                     <i class="fas fa-times fa-fw"></i>
                     Close Window
@@ -261,10 +261,10 @@
                 <img class="img-fluid rounded mb-5" src="#" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Create or join a soccer, fútbol, calcio, or Fußball match. Lace up your boots and have fun!</p>
-                <button class="btn btn-primary" href="/sports/soccer" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Go To Page!
-                </button>
+                <a href="/sports/soccer"><button class="btn btn-primary">
+                    <i class="fas fa-times fa-fw"></i>
+                    Go To Page!
+                  </button></a>
                 <button class="btn btn-secondary" href="#" data-dismiss="modal" style="margin-left: 10px;">
                     <i class="fas fa-times fa-fw"></i>
                     Close Window
@@ -304,10 +304,10 @@
                 <img class="img-fluid rounded mb-5" src="#" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Organize or join a volleyball game near you. Make sure to say whether it's on the beach, grass, or indoors. Set it up and knock it down!</p>
-                <button class="btn btn-primary" href="/sports/volleyball" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Go To Page!
-                </button>
+                <a href="/sports/football"><button class="btn btn-primary">
+                    <i class="fas fa-times fa-fw"></i>
+                    Go To Page!
+                  </button></a>
                 <button class="btn btn-secondary" href="#" data-dismiss="modal" style="margin-left: 10px;">
                     <i class="fas fa-times fa-fw"></i>
                     Close Window
