--- a/pick-up-proj/public/src/app/football/football.component.html
+++ b/pick-up-proj/public/src/app/football/football.component.html
@@ -1,1 +1,33 @@
-<p>football works!</p>
+
+<section class="page-section portfolio" id="portfolio">
+        <div class="text-center mt-4">
+                <h1 class="page-section-heading text-center text-uppercase text-secondary mb-0">Football</h1>
+                <!-- Icon Divider -->
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                </div>
+            <div class="divider-custom-line"></div>
+          </div>
+          <img src="assets/images/football.jgp" alt="football" style="width:300px; height: 175px;"/><br>
+          <table class="table table-hover">
+                <thead>
+                    <!--INSERT FOR LOOP-->
+                  <tr>
+                    <th scope="col">Event Name</th>
+                    <th scope="col">Capacity</th>
+                    <th scope="col">Action</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Dynamic</td>
+                    <td>Data</td>
+                    <td><a href="">Show</a></td>
+                  </tr>
+                </tbody>
+            </table>
+        </div>
+</section>
+
