--- a/pick-up-proj/public/src/app/home/home.component.html
+++ b/pick-up-proj/public/src/app/home/home.component.html
@@ -31,9 +31,11 @@
     </div>
   </header>
   <!--Search Bar-->
-  <div class="text-center mt-4" style="background-color: black; width: 500px; margin-left: 250px; border-radius: 5%">
+  <div class="text-center mt-4" style="background-color: black; width: 500px; margin-left: 250px; border-radius: 5%; box-shadow: 5px 5px #009679">
     <input type="search" name="q" placeholder="search..."/>
-    <button class="btn btn-outline-light">Groups</button><button class="btn btn-outline-light">Calendar</button>
+    <button class="btn btn-outline-light" style="background-color: #009679; margin-left: 10px;">Go!</button>
+    <button class="btn btn-outline-light" style="margin-left: 10px;">Groups</button>
+    <button class="btn btn-outline-light" style="margin-left: 10px;">Calendar</button>
   </div>
   <!-- Portfolio Section -->
   <section class="page-section portfolio" id="portfolio">
