--- a/pick-up-proj/public/src/app/show/show.component.html
+++ b/pick-up-proj/public/src/app/show/show.component.html
@@ -1,1 +1,8 @@
-<p>show works!</p>
+<section class="page-section portfolio" id="portfolio">
+    <div class="text-center mt-4">
+        <p><!--image appears here--></p>
+    </div>
+    <div class="text-center mt-4">
+        <h4><!--Show details of sporting event--></h4>
+    </div>
+</section>
