--- a/pick-up-proj/public/src/app/home/home.component.html
+++ b/pick-up-proj/public/src/app/home/home.component.html
@@ -32,7 +32,8 @@
   </header>
   <!--Search Bar-->
   <div class="text-center mt-4" style="background-color: black; width: 500px; margin-left: 250px; border-radius: 5%; box-shadow: 5px 5px #009679">
-    <input type="search" name="q" placeholder="search..."/>
+    <input type="search" placeholder="search..."/>
+      
     <button class="btn btn-outline-light" style="background-color: #009679; margin-left: 10px;">Go!</button>
     <button class="btn btn-outline-light" style="margin-left: 10px;">Groups</button>
     <button class="btn btn-outline-light" style="margin-left: 10px;">Calendar</button>
@@ -306,7 +307,7 @@
                 <img class="img-fluid rounded mb-5" src="#" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Organize or join a volleyball game near you. Make sure to say whether it's on the beach, grass, or indoors. Set it up and knock it down!</p>
-                <a href="/sports/football"><button class="btn btn-primary">
+                <a href="/sports/volleyball"><button class="btn btn-primary">
                     <i class="fas fa-times fa-fw"></i>
                     Go To Page!
                   </button></a>
