--- a/pick-up-proj/public/src/app/basketball/basketball.component.html
+++ b/pick-up-proj/public/src/app/basketball/basketball.component.html
@@ -9,7 +9,7 @@
                         </div>
                     <div class="divider-custom-line"></div>
                   </div>
-                  <img src="assets/images/bball.jpg" alt="Basketball" style="width:300px; height: 175px;"/><br><br>
+                  <img src="assets/images/bball.png" alt="Basketball" style="width:300px; height: 175px;"/><br><br>
                   <table class="table table-hover">
                         <thead>
                             <!--INSERT FOR LOOP-->
@@ -23,7 +23,9 @@
                           <tr>
                             <td>Dynamic</td>
                             <td>Data</td>
-                            <td><a href="#">Show</a></td>
+                            <td><a href="#">Show</a>
+                              <a href=""><span class="text-danger" style="margin-left: 10px;">Delete</span></a>
+                            </td>
                           </tr>
                         </tbody>
                         </table>
