--- a/pick-up-proj/public/src/app/create/create.component.html
+++ b/pick-up-proj/public/src/app/create/create.component.html
@@ -4,7 +4,7 @@
     <h1>Set-Up The <span style="color:#009679">Squad</span></h1><br>
     <form (submit)="addSport()">
         <div class="form-group" style="width: 500px; margin-left: 240px;">
-            <p>Your name: <input class="form-control" type="text" name="user.name" [(ngModel)]="user.name"></p>
+            <p>Your name: <input class="form-control" type="text" name="user.name" [(ngModel)]="user.fullname"></p>
             <small class="text-danger d-block" *ngIf="err.name!=null">{{err.name.message}}</small>
         </div>
         <div class="form-group">
@@ -33,9 +33,9 @@
                 <small class="text-danger d-block" *ngIf="err.level!=null">{{err.level.message}}</small>
             </div>
             <div class="form-group" style="width: 500px; margin-left: 240px;">
-                    <p>Description: <textarea class="form-control" type="text" name="description" [(ngModel)]="newSport.description"></textarea></p>
-                    <small class="text-danger d-block" *ngIf="err.description!=null">{{err.description.message}}</small>
-                </div>
+                <p>Description: <textarea class="form-control" type="text" name="description" [(ngModel)]="newSport.description"></textarea></p>
+                <small class="text-danger d-block" *ngIf="err.description!=null">{{err.description.message}}</small>
+            </div>
         <div class="form-group" style="width: 500px; margin-left: 240px;">
             <p>Location: <input class="form-control" type="text" name="newSport.location" [(ngModel)]="newSport.location"></p>
             <small class="text-danger d-block" *ngIf="err.location!=null">{{err.location.message}}</small>
