--- a/pick-up-proj/public/src/app/football/football.component.html
+++ b/pick-up-proj/public/src/app/football/football.component.html
@@ -10,7 +10,7 @@
                 </div>
             <div class="divider-custom-line"></div>
           </div>
-          <img src="assets/images/football.jgp" alt="football" style="width:300px; height: 175px;"/><br>
+          <img src="assets/images/football.png" alt="football" style="width:450px; height: 175px;"/><br><br>
           <table class="table table-hover">
                 <thead>
                     <!--INSERT FOR LOOP-->
@@ -24,7 +24,9 @@
                   <tr>
                     <td>Dynamic</td>
                     <td>Data</td>
-                    <td><a href="">Show</a></td>
+                    <td><a href="">Show</a>
+                      <a href=""><span class="text-danger" style="margin-left: 10px;">Delete</span></a>
+                    </td>
                   </tr>
                 </tbody>
             </table>
