--- a/pick-up-proj/public/src/app/volleyball/volleyball.component.html
+++ b/pick-up-proj/public/src/app/volleyball/volleyball.component.html
@@ -9,7 +9,7 @@
                         </div>
                     <div class="divider-custom-line"></div>
                   </div>
-                  <img src="assets/images/vball.jgp" alt="volleyball" style="width:300px; height: 175px;"/>
+                  <img src="assets/images/vball.png" alt="volleyball" style="width:300px; height: 175px;"/>
                   <hr>
                   <table class="table table-hover">
                         <thead>
@@ -24,7 +24,9 @@
                           <tr>
                             <td>Dynamic</td>
                             <td>Data</td>
-                            <td><a href="">Show</a></td>
+                            <td><a href="">Show</a>
+                            <a href=""><span class="text-danger" style="margin-left: 10px;">Delete</span></a>
+                            </td>
                           </tr>
                         </tbody>
                     </table>
