--- a/pick-up-proj/public/src/app/chat/chat.component.html
+++ b/pick-up-proj/public/src/app/chat/chat.component.html
@@ -20,7 +20,7 @@
           <p class="masthead-subheading font-weight-light mb-0">Add - Join - Start Chatting!</p>
     
           <div class="text-center mt-4" data-toggle="collapse">
-            <a class="btn btn-xl btn-outline-light" href="/sports/chatroom">
+            <a class="btn btn-xl btn-outline-light" href="http://localhost:8000">
               <i class="fas fa-download mr-2"></i>
              Create your ChatRoom!
             </a>
