--- a/pick-up-proj/public/src/app/show/show.component.html
+++ b/pick-up-proj/public/src/app/show/show.component.html
@@ -3,6 +3,7 @@
         <p><!--image appears here--></p>
     </div>
     <div class="text-center mt-4">
+        <h1>SHOW PAGE</h1>
         <h4><!--Show details of sporting event--></h4>
     </div>
 </section>
