--- a/groupchat/views/index.ejs
+++ b/groupchat/views/index.ejs
@@ -28,16 +28,42 @@
             })
         });
     </script>
+    <style>
+        .body{
+            background-color: #293E53;
+            width: 1000px;
+            height: 600px;
+            display: inline-block;
+        }
+        .wrapper{
+            background-color: #009679;
+
+        }
+        .search{
+            margin-left: 50px;
+        }
+    </style>
 </head>
 
-<body>
+<body class="body">
     <div class="container">
-        <div class="container">
-            <h1 class="text-center">Groupchat Lobby</h1>
+            <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+                    <div class="container">
+                      <a class="navbar-brand js-scroll-trigger" href="/"><span style="color:#009679;">SportsUP</span></a>
+                      <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                        BACK
+                        <i class="fas fa-bars"></i>
+                      </button>
+                    </div>
+                  </nav><br><br><br><br>
+        <div class="wrapper">
+            <div class="search">
+            <h1 class="text-center" id="header">Groupchat Lobby</h1>
             <form action="/room" method="POST">
                 <input type="text" class="form-control col-4 d-inline-block m-0" name="room" placeholder="Room name..">
                 <button type="submit" class="btn btn-primary m-0">Create a groupchat</button>
             </form>
+            </div>
             <h3 class="mt-4">Rooms:</h3>
             <div id="rooms-container" class="row">
                 <% Object.keys(rooms).forEach(room => { %>
