--- a/pick-up-proj/public/src/app/soccer/soccer.component.html
+++ b/pick-up-proj/public/src/app/soccer/soccer.component.html
@@ -2,7 +2,7 @@
                 <div class="text-center mt-4">
                         <h1 class="page-section-heading text-center text-uppercase text-secondary mb-0">Soccer</h1>
                         <!-- Icon Divider -->
-                    <div class="divider-custom divider-light">
+                    <div class="divider-custom divider-light" style="background-color: #009679">
                         <div class="divider-custom-line"></div>
                             <div class="divider-custom-icon">
                             <i class="fas fa-star"></i>
