--- a/groupchat/views/index.ejs
+++ b/groupchat/views/index.ejs
@@ -49,11 +49,11 @@
     <div class="container">
             <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
                     <div class="container">
-                      <a class="navbar-brand js-scroll-trigger" href="/"><span style="color:#009679;">SportsUP</span></a>
-                      <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                      <a class="navbar-brand js-scroll-trigger" href="http://localhost:7000/sports"><button style="background-color:#009679"; ><span>SPORTSUP</span></button></a>
+                      <a href="http://localhost:7000/sports/chatroom"><button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         BACK
                         <i class="fas fa-bars"></i>
-                      </button>
+                      </button></a>
                     </div>
                   </nav><br><br><br><br>
         <div class="wrapper">
