--- a/pick-up-proj/public/src/app/create/create.component.html
+++ b/pick-up-proj/public/src/app/create/create.component.html
@@ -5,7 +5,7 @@
     <form (submit)="addSport()">
         <div class="form-group" style="width: 500px; margin-left: 240px;">
             <p>Your name: <input class="form-control" type="text" name="user.name" [(ngModel)]="user.fullname"></p>
-            <small class="text-danger d-block" *ngIf="err.name!=null">{{err.name.message}}</small>
+            <small class="text-danger d-block" *ngIf="err.fullname!=null">{{err.fullname.message}}</small>
         </div>
         <div class="form-group">
             <p>Level: </p>
