--- a/pick-up-proj/public/src/app/soccer/soccer.component.html
+++ b/pick-up-proj/public/src/app/soccer/soccer.component.html
@@ -20,9 +20,9 @@
                           </tr>
                         </thead>
                         <tbody>
-                          <tr>
-                            <td>Dynamic</td>
-                            <td>Data</td>
+                          <tr *ngFor="let event of events">
+                            <td>{{event.name}}</td>
+                            <td>{{event.capacity}}</td>
                             <td><a href="#">Show</a>
                               <a href=""><span class="text-danger" style="margin-left: 10px;">Delete</span></a>
                             </td>
