--- a/pick-up-proj/public/src/app/basketball/basketball.component.html
+++ b/pick-up-proj/public/src/app/basketball/basketball.component.html
@@ -20,11 +20,11 @@
                           </tr>
                         </thead>
                         <tbody>
-                          <tr>
+                          <tr *ngFor="let event of events">
                             <td>Dynamic</td>
                             <td>Data</td>
                             <td><a href="#">Show</a>
-                              <a href=""><span class="text-danger" style="margin-left: 10px;">Delete</span></a>
+                              <a href="" (click)="onClickDelete(event._id)"><span class="text-danger" style="margin-left: 10px;">Delete</span></a>
                             </td>
                           </tr>
                         </tbody>
