--- a/pick-up-proj/public/src/app/volleyball/volleyball.component.html
+++ b/pick-up-proj/public/src/app/volleyball/volleyball.component.html
@@ -21,11 +21,11 @@
                           </tr>
                         </thead>
                         <tbody>
-                          <tr>
-                            <td>Dynamic</td>
-                            <td>Data</td>
+                          <tr *ngFor="let event of events">
+                            <td>{{event.name}}</td>
+                            <td>{{event.capacity}}</td>
                             <td><a href="">Show</a>
-                            <a href=""><span class="text-danger" style="margin-left: 10px;">Delete</span></a>
+                            <a href="" (click)="onClickDelete(event._id)"><span class="text-danger" style="margin-left: 10px;">Delete</span></a>
                             </td>
                           </tr>
                         </tbody>
