--- a/groupchat/views/home.ejs
+++ b/groupchat/views/home.ejs
@@ -17,12 +17,15 @@
         .body{
             background-color: #293E53;
         }
+        #messages{
+            background-color: white;
+        }
     </style>
 </head>
 
 <body class="body">
     <div class="container">
-        <div class="container"><br>
+        <div class="containerinner"><br>
             <h4 class="text-center"><span style="color: #009679"><u>Conversation Board</u></span></h4><br>
             <div id="messages" class="border pl-2 pt-1 overflow-auto" style="height: 300px;">
                 <button class="badge badge-success float-right">new message</button>
