--- a/pick-up-proj/public/src/app/home/home.component.html
+++ b/pick-up-proj/public/src/app/home/home.component.html
@@ -133,7 +133,7 @@
           <p class="lead">SPORTSUP is where you go to find local pick-up games created by local members of your community. Our goal is to make communities stronger and for new members to be able to find others who share similar interests.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">List of technologies we used: </p>
+          <p class="lead">List of technologies we used: bootstrap, angular, express, mongoDB, sockets</p>
         </div>
       </div>
 
