--- a/pick-up-proj/public/src/app/basketball/basketball.component.html
+++ b/pick-up-proj/public/src/app/basketball/basketball.component.html
@@ -21,9 +21,9 @@
                         </thead>
                         <tbody>
                           <tr *ngFor="let event of events">
-                            <td>Dynamic</td>
-                            <td>Data</td>
-                            <td><a href="#">Show</a>
+                            <td>{{event.name}}</td>
+                            <td>{{event.capacity}}</td>
+                            <td><a [routerLink]="['/sports/'+event._id]">Show</a>
                               <a href="" (click)="onClickDelete(event._id)"><span class="text-danger" style="margin-left: 10px;">Delete</span></a>
                             </td>
                           </tr>
