--- a/pick-up-proj/public/src/app/edit/edit.component.html
+++ b/pick-up-proj/public/src/app/edit/edit.component.html
@@ -1,1 +1,54 @@
-<p>edit works!</p>
+<section class="page-section portfolio" id="portfolio">
+        <div class="text-center mt-4">
+            <!--INSERT PROGRESS BAR HERE-->
+            <h1>Update The <span style="color:#009679">Squad</span></h1><br>
+            <form (submit)="editSport()">
+                <div class="form-group" style="width: 500px; margin-left: 240px;">
+                    <p>Your name: <input class="form-control" type="text" name="user.name" [(ngModel)]="user.fullname"></p>
+                    <small class="text-danger d-block" *ngIf="err.fullname!=null">{{err.fullname.message}}</small>
+                </div>
+                <hr>
+                <p style="font-size: small;"><i>Event details</i></p>
+                <div class="form-group" style="width: 500px; margin-left: 240px;">
+                    <p>Name of event: <input class="form-control" type="text" name="newSport.name" [(ngModel)]="newSport.name"></p>
+                    <small class="text-danger d-block" *ngIf="err.name!=null">{{err.name.message}}</small>
+                </div>
+                <div class="form-group">
+                        <p>Category: </p>
+                        <select name="newSport.category" [(ngModel)]="newSport.category">
+                            <option value="basketball">Basketball</option>
+                            <option value="soccer">Soccer</option>
+                            <option value="football">Football</option>
+                            <option value="volleyball">Volleyball</option>
+                        </select>
+                        <small class="text-danger d-block" *ngIf="err.level!=null">{{err.level.message}}</small>
+                    </div>
+                    <div class="form-group" style="width: 500px; margin-left: 240px;">
+                        <p>Description: <textarea class="form-control" type="text" name="description" [(ngModel)]="newSport.description"></textarea></p>
+                        <small class="text-danger d-block" *ngIf="err.description!=null">{{err.description.message}}</small>
+                    </div>
+                <div class="form-group" style="width: 500px; margin-left: 240px;">
+                    <p>Location: <input class="form-control" type="text" name="newSport.location" [(ngModel)]="newSport.location"></p>
+                    <small class="text-danger d-block" *ngIf="err.location!=null">{{err.location.message}}</small>
+                </div>
+                <div class="form-group" style="width: 500px; margin-left: 240px;">
+                    <p>Date: <input class="form-control" type="date" name="newSport.date" [(ngModel)]="newSport.date"></p>
+                    <small class="text-danger d-block" *ngIf="err.date!=null">{{err.date.message}}</small>
+                </div>
+                <div class="form-group" style="width: 500px; margin-left: 240px;">
+                    <p>Capacity: <input class="form-control" type="number" name="newSport.capacity" [(ngModel)]="newSport.capacity"></p>
+                    <small class="text-danger d-block" *ngIf="err.capacity!=null">{{err.capacity.message}}</small>
+                </div>
+                <div class="form-group" style="width: 500px; margin-left: 240px;">
+                    <p>Image URL: <input class="form-control" type="text" name="newSport.image" [(ngModel)]="newSport.image"></p>
+                    <small class="text-danger d-block" *ngIf="err.image!=null">{{err.image.message}}</small>
+                </div>
+                <div class="form-group" style="width: 100px; margin-left: 440px;">
+                    <input class="btn btn-outline-dark" style="color:#009679;" type="submit" value="Update!"><br>
+                    <button class="btn btn-secondary" [routerLink]="['/']">Cancel</button>
+                </div>
+            </form>
+        </div>
+        </section>
+        
+        
